--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "weather-app",
+  "name": "weather-app-v1-backend",
   "version": "1.0.0",
-  "description": "An app that shows weather information",
+  "description": "An app that shows weather information.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vitorpessoti/weather-app.git"
+    "url": "git+https://github.com/vitorpessoti/weather-app-backend.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/vitorpessoti/weather-app/issues"
+    "url": "https://github.com/vitorpessoti/weather-app-backend/issues"
   },
-  "homepage": "https://github.com/vitorpessoti/weather-app#readme",
+  "homepage": "https://github.com/vitorpessoti/weather-app-backend#readme",
   "dependencies": {
     "consign": "^0.1.6",
     "cors": "^2.8.5",
